--- a/3Dproject/3Dproject.vcxproj.filters
+++ b/3Dproject/3Dproject.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="Source.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
+    <ClCompile Include="zombie.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="zombie.h">
